Listy do 7 ukończone i oddane

--- a/lista 7/lista 7.ipynb
+++ b/lista 7/lista 7.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "ced77d3b",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "27b06a31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f67477d157104c04afb53a18e637bda4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c8dec0be0c745d5a1f084dac51b753b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78a790f8805c4454b565abdf02a30052",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b0872e8a0ec46b290be486736537c83",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82605e97d91d4bffa95662458e6485af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1dfb9d5d0fa54e989afc2a1bc2efce77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e1bf2ddad0e44839e1bd40f2b9bb75b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ecdc0b5f2c354ef1a7c91370e9c9620b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def draw_wavelet(wavelet, label, level=5):\n",
     "    try:\n",
@@ -108,10 +221,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "85be1fff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ca44bdcd9114fdab6b5867b2898d9df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9503939626a4d7392efcd98e4dfaf1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ebd6e166e32c4659802bfad38dcfca2b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e9107438cae46c7ae224f8a32c80477",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "320fee97a63b4c1581d9dc4c37ae8aef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "807bda18e68c4c97b8b557c27e596766",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6f6429930f54760a944d40169f1762f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2aa06f035bd447d28bfb708058dd2011",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2124c657452346c3944f4eb0256eb896",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e412d15ed3ea467eaeac2508912a52a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cfeb13999e814a27b72a227e2694a819",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='stopień', max=15, min=2), Output()), _dom_classes=('widg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "wersje = {\n",
     "    'Daubechies' : {'Daubechies 1' : 'db1', 'Daubechies 2' : 'db2', 'Daubechies 3' : 'db3', 'Daubechies 4' : 'db4'},\n",
@@ -138,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "bc024105",
    "metadata": {},
    "outputs": [],
@@ -164,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "c7cf77e8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc929e2148d74bb8bfb52f312b10de26",
+       "model_id": "6e08b9d50dc1407482027f46062fc143",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,7 +453,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90c76745622f4a0bab437e90d8032b8d",
+       "model_id": "871cdca795fd4ffd92cc898b2aea7fdb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d82fc09f8e2d491da5c3b40635804906",
+       "model_id": "0ba20a4b500b4c18994665a91ca97d94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,7 +481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ae7d5c187904fd8adad8d857811b9c7",
+       "model_id": "cb9a229094f94c4cba0d1a1c2893447e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99c34c2f358148368b02a9bf31f50224",
+       "model_id": "dab719dd714a464d8656527818e580f1",
        "version_major": 2,
        "version_minor": 0
       },
